--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   </head>
   <body>
   	<div id="add-to-home-banner" style="display: none; position: fixed; top: 0; left: 0; right: 0; background-color: #6c5ce7; color: white; padding: 10px; text-align: center; z-index: 1000;">
-  <span>Tambahkan shortcut ke layar utama untuk akses cepat!</span>
-  <button id="add-to-home" style="background-color: #ffffff; color: #6c5ce7; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold;">Tambah ke Home</button>
+  <span>Install RuangRiung Ai Image Generator untuk akses lebih cepat!</span>
+  <button id="add-to-home" style="background-color: #ffffff; color: #6c5ce7; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold;">Install</button>
 </div>
     <div class="container">
       <header>
