--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-<div id="add-to-home-banner" style="display: none; position: fixed; top: 0; left: 0; right: 0; background-color: #6c5ce7; color: white; padding: 10px; text-align: center; z-index: 1000;">
-  <span>Install RuangRiung AI Image Generator untuk akses lebih cepat!</span>
+<div id="add-to-home-banner" style="display: none; position: fixed; top: 50px; left: 0; right: 0; background-color: #6c5ce7; color: white; padding: 10px; text-align: center; z-index: 1000;">
+  <span>Install RuangRiung AI Image Generator untuk akses yang lebih cepat! </span>
   <button id="add-to-home" style="background-color: #ffffff; color: #6c5ce7; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold;">Install</button>
-  <button id="close-banner" style="background: none; color: white; border: none; font-size: 20px; font-weight: bold; cursor: pointer; position: absolute; top: 10px; right: 10px;">X</button>
+  <button id="close-banner" style="background: none; color: white; border-radius: 5px; font-size: 20px; font-weight: bold; cursor: pointer; position: absolute; top: 10px; right: 10px;">X</button>
 </div>
     <div class="container">
       <header>
