--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
       >
       <i class="fas fa-cloud"></i>
 
-      <button id="reset-all-btn" class="footer-reset-btn">
+      <button id="reset-btn" class="footer-reset-btn">
         <i class="fas fa-trash"></i>
         <span class="reset-all-text">Reset All Settings</span>
       </button>
