--- a/index.html
+++ b/index.html
@@ -1167,5 +1167,6 @@
     <script src="assets/models.js"></script>
     <script src="assets/ruangriung.js"></script>
     <script src="assets/translationModule.js"></script>
+        <script src="assets/faqModule.js"></script>
   </body>
 </html>
