--- a/index.html
+++ b/index.html
@@ -1168,5 +1168,6 @@
     <script src="assets/ruangriung.js"></script>
     <script src="assets/translationModule.js"></script>
         <script src="assets/faqModule.js"></script>
+    <script src="assets/promptTranslate.js"></script>
   </body>
 </html>
