--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,11 @@
         >Cloudflare</a
       >
       <i class="fas fa-cloud"></i>
+      <div style="margin: 1rem 0;">
+  <a href="contact.html" style="color: var(--primary); text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem;">
+    <i class="fas fa-envelope"></i> Contact Support
+  </a>
+      </div>
 
       <button id="reset-btn" class="footer-reset-btn">
         <i class="fas fa-trash"></i>
