--- a/index.html
+++ b/index.html
@@ -1174,5 +1174,7 @@
     <script src="assets/translationModule.js"></script>
         <script src="assets/faqModule.js"></script>
     <script src="assets/promptTranslate.js"></script>
+    <script src="assets/consent-cookies.js"></script>
+    <script src="assets/status-indicator.js"></script>
   </body>
 </html>
