--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
             <i class="fas fa-comment-dots"></i>
             <span>AI Text Generation</span>
           </a>
+          <a href="prompt-generator/" class="ai-text-toggle">
+            <i class="fas fa-pen-to-square"></i>
+            <span>Prompt Generation</span>
+          </a>
 
           <button id="analyze-image-btn" class="image-upload-btn">
             <i class="fas fa-image"></i> Image To Teks
