--- a/prompt-generator/index.html
+++ b/prompt-generator/index.html
@@ -499,17 +499,85 @@
                 <div class="form-group">
                     <label for="style">Art Style</label>
                     <select id="style">
-                        <option value="">Any style</option>
-                        <option value="photorealistic">Photorealistic</option>
-                        <option value="digital art">Digital Art</option>
-                        <option value="oil painting">Oil Painting</option>
-                        <option value="watercolor">Watercolor</option>
-                        <option value="anime">Anime</option>
-                        <option value="pixel art">Pixel Art</option>
-                        <option value="cyberpunk">Cyberpunk</option>
-                        <option value="steampunk">Steampunk</option>
-                        <option value="impressionist">Impressionist</option>
-                        <option value="surrealist">Surrealist</option>
+                        <option value="realistic">Realistik</option>
+<option value="cartoon">Kartun</option>
+<option value="abstract">Abstrak</option>
+<option value="fantasy">Fantasi</option>
+<option value="minimalist">Minimalis</option>
+<option value="surreal">Surealis</option>
+<option value="impressionistic">Impresionis</option>
+<option value="art deco">Art Deco</option>
+<option value="pop art">Pop Art</option>
+<option value="cyberpunk">Cyberpunk</option>
+<option value="steampunk">Steampunk</option>
+<option value="retro">Retro</option>
+<option value="vintage">Vintage</option>
+<option value="gothic">Gothic</option>
+<option value="anime">Anime</option>
+<option value="manga">Manga</option>
+<option value="watercolor">Watercolor</option>
+<option value="oil painting">Oil Painting</option>
+<option value="sketch">Sketch</option>
+<option value="line art">Line Art</option>
+<option value="photorealistic">Photorealistic</option>
+<option value="digital art">Digital Art</option>
+<option value="pixel art">Pixel Art</option>
+<option value="low poly">Low Poly</option>
+<option value="3d">3D</option>
+<option value="isometric">Isometric</option>
+<option value="futuristic">Futuristic</option>
+<option value="geometric">Geometric</option>
+<option value="abstract expressionism">Abstract Expressionism</option>
+<option value="cubism">Cubism</option>
+<option value="surrealism">Surrealism</option>
+<option value="dadaism">Dadaism</option>
+<option value="art nouveau">Art Nouveau</option>
+<option value="renaissance">Renaissance</option>
+<option value="baroque">Baroque</option>
+<option value="rococo">Rococo</option>
+<option value="neoclassical">Neoclassical</option>
+<option value="romanticism">Romanticism</option>
+<option value="realism">Realism</option>
+<option value="symbolism">Symbolism</option>
+<option value="art deco">Art Deco</option>
+<option value="modernism">Modernism</option>
+<option value="postmodernism">Postmodernism</option>
+<option value="conceptual art">Conceptual Art</option>
+<option value="performance art">Performance Art</option>
+<option value="installation art">Installation Art</option>
+<option value="land art">Land Art</option>
+<option value="body art">Body Art</option>
+<option value="street art">Street Art</option>
+<option value="graffiti">Graffiti</option>
+<option value="pop art">Pop Art</option>
+<option value="minimalism">Minimalism</option>
+<option value="abstract expressionism">Abstract Expressionism</option>
+<option value="color field painting">Color Field Painting</option>
+<option value="hard edge painting">Hard Edge Painting</option>
+<option value="op art">Op Art</option>
+<option value="kinetic art">Kinetic Art</option>
+<option value="light art">Light Art</option>
+<option value="video art">Video Art</option>
+<option value="digital art">Digital Art</option>
+<option value="net art">Net Art</option>
+<option value="virtual reality art">Virtual Reality Art</option>
+<option value="augmented reality art">Augmented Reality Art</option>
+<option value="mixed media">Mixed Media</option>
+<option value="collage">Collage</option>
+<option value="assemblage">Assemblage</option>
+<option value="photography">Photography</option>
+<option value="film">Film</option>
+<option value="animation">Animation</option>
+<option value="graphic design">Graphic Design</option>
+<option value="typography">Typography</option>
+<option value="illustration">Illustration</option>
+<option value="comic art">Comic Art</option>
+<option value="manga">Manga</option>
+<option value="anime">Anime</option>
+<option value="cartoon">Cartoon</option>
+<option value="comic strip">Comic Strip</option>
+<option value="graphic novel">Graphic Novel</option>
+
                     </select>
                 </div>
                 
