--- a/prompt-generator/index.html
+++ b/prompt-generator/index.html
@@ -499,6 +499,7 @@
                 <div class="form-group">
                     <label for="style">Art Style</label>
                     <select id="style">
+			    <option value="any style">Any Style</option>
                         <option value="realistic">Realistik</option>
 <option value="cartoon">Kartun</option>
 <option value="abstract">Abstrak</option>
