--- a/prompt-generator/index.html
+++ b/prompt-generator/index.html
@@ -641,7 +641,7 @@
                     </div>
                 </div>
                 <div class="button-group">
-                    <button id="copy-btn">Copy to Clipboard</button>
+                    <button id="copy-btn">Salin Prompt</button>
                     <button id="clear-btn">Clear Prompt</button>
                 </div>
                 <div id="prompt-status" class="status"></div>
