--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
       name="google-site-verification"
       content="3Mybm59m8--LyAZpVYIGHrVk1fSkYemj33bq5RBBdxA"
     />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0X417J9R6K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0X417J9R6K');
+</script>
     <!-- Meta Description -->
     <meta
       name="description"
