--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       content="3Mybm59m8--LyAZpVYIGHrVk1fSkYemj33bq5RBBdxA"
     />
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0X417J9R6K"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PWFT2SQWNZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0X417J9R6K');
+  gtag('config', 'G-PWFT2SQWNZ');
 </script>
     <!-- Meta Description -->
     <meta
