--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </button>
         <p style="font-size: 12px; color: #777; font-style: italic">
           <i class="fas fa-circle-info"></i>
-          Tuliskan dalam bahasa Inggris untuk hasil yang akurat
+          kini telah mendukung bahasa Indonesia!
         </p>
         <div class="input-group">
           <i class="fas fa-wand-magic-sparkles input-icon"></i>
