--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,15 @@
       </div>
     </div>
     <footer>
+	    <!-- PWA Install Button - Above Footer -->
+<div class="pwa-install-container" style="text-align: center; margin: 20px 0;">
+	<p class="text-muted" style="margin-top: 8px; font-size: 0.8rem;">
+    Install Generator ruangriung untuk pengalaman lebih baik
+	</p>
+  <button id="pwa-install-btn" class="btn btn-primary" style="display: none;">
+    <i class="fas fa-download"></i> Install Aplikasi
+  </button>
+</div>
       &copy; <span id="current-year"></span> RuangRiung AI Image Generator
       Ver.5.1.0. All rights reserved | powered by
       <a href="https://pollinations.ai" target="_blank" class="footer-link"
@@ -1203,5 +1212,6 @@
     <script src="assets/consent-cookies.js"></script>
     <script src="assets/status-indicator.js"></script>
 	<script src="assets/size-preset.js"></script>
+	  <script src="assets/pwa-installer.js"></script>
   </body>
 </html>
