--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
     Install Generator ruangriung untuk pengalaman lebih baik
 	</p>
   <button id="pwa-install-btn" class="btn btn-primary" style="display: none;">
-    <i class="fas fa-download"></i> Install Aplikasi
+    <i class="fas fa-download"></i> Install
   </button>
 </div>
       &copy; <span id="current-year"></span> RuangRiung AI Image Generator
