--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/ruangriung.css" />
+<link rel="stylesheet" href="assets/assistant.css" />
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
@@ -1203,5 +1204,6 @@
 	<script src="assets/size-preset.js"></script>
 	  <script src="assets/pwa-installer.js"></script>
 	  <script src="assets/promptGen.js"></script>
+	  <script src="assets/assistant.js"></script>
   </body>
 </html>
