--- a/index.html
+++ b/index.html
@@ -172,22 +172,24 @@
             </button>
           </div>
         </div>
-	      <!-- Add this right before the translation module -->
-<div class="negative-prompt-container">
-  <div class="negative-prompt-toggle" id="negative-prompt-toggle">
-    <span><i class="fas fa-exclamation-triangle"></i> Negative Prompt (Optional)</span>
-    <i class="fas fa-chevron-down negative-prompt-arrow"></i>
-  </div>
-  <div class="negative-prompt-content" id="negative-prompt-content">
-    <textarea 
-      id="negative-prompt-textarea" 
-      placeholder="Describe what you don't want in the image (e.g. blurry, distorted, extra limbs, bad anatomy)"
-    ></textarea>
-    <div class="negative-prompt-suggestions" id="negative-prompt-suggestions"></div>
-    <button class="refresh-suggestions" id="refresh-negative-suggestions">
-      <i class="fas fa-sync-alt"></i> Refresh Suggestions
-    </button>
-  </div>
+<!-- Negative Prompt Section -->
+<button id="negative-prompt-toggle" class="negative-prompt-toggle">
+    <i class="fas fa-eye-slash"></i> <span class="toggle-text">Show Negative Prompt</span>
+</button>
+
+<div id="negative-prompt-container" class="negative-prompt-container" style="display: none;">
+    <label for="negative-prompt-textarea">
+        <i class="fas fa-ban"></i> <span class="label-text">Negative Prompt</span>
+    </label>
+    <textarea id="negative-prompt-textarea" class="negative-prompt-textarea" 
+              placeholder="What you don't want in the image (e.g. blurry, deformed, ugly, extra limbs)"></textarea>
+    <div class="negative-prompt-note">
+        <i class="fas fa-circle-info"></i> <span class="note-text">Describe elements to exclude from the generated image</span>
+    </div>
+    
+    <div class="common-negative-prompts">
+        <!-- Common prompts will be added by JavaScript -->
+    </div>
 </div>
 <!-- Add this where you want the translation module to appear in your HTML -->
 <div class="translation-module">
@@ -1212,6 +1214,7 @@
     <script src="assets/coinSystem.js"></script>
     <script src="assets/adBannerModule.js"></script>
     <script src="assets/models.js"></script>
+    <script src="assets/negatif.js"></script>
     <script src="assets/ruangriung.js"></script>
     <script src="assets/translationModule.js"></script>
         <script src="assets/faqModule.js"></script>
@@ -1222,6 +1225,6 @@
 	  <script src="assets/pwa-installer.js"></script>
 	  <script src="assets/promptGen.js"></script>
 	  <script src="assets/assistant.js"></script>
-	  <script src="assets/negative.js"></script>
+
   </body>
 </html>
