--- a/index.html
+++ b/index.html
@@ -1225,6 +1225,7 @@
 	  <script src="assets/pwa-installer.js"></script>
 	  <script src="assets/promptGen.js"></script>
 	  <script src="assets/assistant.js"></script>
+	    <script src="assets/zoom.js"></script>
 
   </body>
 </html>
