--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     />
     <link rel="stylesheet" href="assets/ruangriung.css" />
 <link rel="stylesheet" href="assets/assistant.css" />
+    <link rel="stylesheet" href="assets/tts.css"/>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
@@ -215,6 +216,49 @@
 </button>
       </div>
     </div>
+  </div>
+</div>
+<!-- Add this to your HTML where the TTS module is defined -->
+<div class="tts-module">
+  <div class="tts-toggle" id="tts-toggle">
+    <span><i class="fas fa-volume-up"></i>   Text-to-Audio</span>
+    <i class="fas fa-chevron-down tts-arrow"></i>
+  </div>
+  <div class="tts-content" id="tts-content">
+    <div class="tts-controls">
+      <textarea class="tts-textarea" id="tts-textarea" placeholder="Enter text to convert to speech..."></textarea>
+      <div class="tts-buttons">
+        <div class="tts-voice-select">
+          <label for="tts-voice-select">Voice:</label>
+          <select id="tts-voice-select">
+            <option value="alloy">Alloy</option>
+            <option value="echo">Echo</option>
+            <option value="fable">Fable</option>
+            <option value="onyx">Onyx</option>
+            <option value="nova">Nova</option>
+            <option value="shimmer">Shimmer</option>
+          </select>
+        </div>
+        <button class="tts-btn" id="tts-generate-btn">
+          <i class="fas fa-play"></i> Generate Speech
+        </button>
+        <button class="tts-btn" id="tts-stop-btn" disabled>
+          <i class="fas fa-stop"></i> Stop
+        </button>
+        <button class="tts-clear-btn" id="tts-clear-btn">
+          <i class="fas fa-eraser"></i> Clear Text
+        </button>
+      </div>
+    </div>
+    <div class="tts-audio-container" id="tts-audio-container" style="display: none;">
+      <audio id="tts-audio-element" controls></audio>
+      <div class="tts-download-container">
+        <a id="tts-download-link" href="#" download="tts-output.mp3" class="tts-download-btn">
+          <i class="fas fa-download"></i> Download Audio
+        </a>
+      </div>
+    </div>
+    <div id="tts-status" class="tts-status" style="display: none;"></div>
   </div>
 </div>
         <div class="button-group-container">
@@ -1225,7 +1269,8 @@
 	  <script src="assets/pwa-installer.js"></script>
 	  <script src="assets/promptGen.js"></script>
 	  <script src="assets/assistant.js"></script>
-	    <script src="assets/zoom.js"></script>
+	  <script src="assets/zoom.js"></script>
+	  <script src="assets/tts.js"></script>
 
   </body>
 </html>
