--- a/index.html
+++ b/index.html
@@ -697,8 +697,8 @@
               <i class="fas fa-star"></i>
               <select id="quality">
                 <option value="normal">Normal</option>
-                <option value="high" selected>High</option>
-                <option value="ultra">Ultra</option>
+                <option value="high" >High</option>
+                <option value="ultra" selected>Ultra</option>
               </select>
             </div>
           </div>
