--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="theme-color" content="#6c5ce7" />
     <meta name="msapplication-navbutton-color" content="#6c5ce7" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#6c5ce7" />
+	<meta name="keywords" content="AI image generator, pembuat gambar AI, seni digital AI, generator gambar Indonesia, RuangRiung, AI kreatif, text to image Indonesia, ai Indonesia, gambar AI realistis, ilustrasi AI, fotografi AI, seni AI Indonesia, gambar anime AI, AI artistik, teknologi kreatif, AI untuk desain, pembuat konten AI, AI lokal Indonesia, seni digital, gambar berkualitas tinggi, AI painting, generator gambar online, AI untuk UMKM, kreasi visual AI, AI untuk konten media sosial, gambar unik AI, AI untuk pemasaran, seni generatif, AI untuk bisnis, teknologi AI Indonesia, inovasi kreatif, AI untuk pengusaha">
 
     <!-- Open Graph / Social Media Meta (opsional tapi recommended) -->
     <meta
