--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   </div>
 </div>
 <div style="margin-top: 10px;">
-  <a href="video-prompt.html" class="btn btn-secondary" style="width: 100%; text-align: center; display: flex; text-decoration: none; justify-content: center; align-items: left; gap: 5px;">
+  <a href="video-prompt/" class="btn btn-secondary" style="width: 100%; text-align: center; display: flex; text-decoration: none; justify-content: center; align-items: left; gap: 5px;">
     <i class="fas fa-film"></i>
     <span>Prompt Video Generator</span>
         <i class="fas fa-external-link"></i>
