--- a/video-prompt/index.html
+++ b/video-prompt/index.html
@@ -176,6 +176,31 @@
                         </div>
                     </div>
 
+                    <!-- In the Visual Effects Toggle section, add these new checkbox options -->
+<div class="checkbox-group">
+    <input type="checkbox" id="vhs-glitch">
+    <label for="vhs-glitch">VHS Glitch</label>
+</div>
+<div class="checkbox-group">
+    <input type="checkbox" id="montage">
+    <label for="montage">Montage Effect</label>
+</div>
+<div class="checkbox-group">
+    <input type="checkbox" id="datamosh">
+    <label for="datamosh">Datamosh</label>
+</div>
+<div class="checkbox-group">
+    <input type="checkbox" id="scanlines">
+    <label for="scanlines">Scanlines</label>
+</div>
+<div class="checkbox-group">
+    <input type="checkbox" id="vignette">
+    <label for="vignette">Vignette</label>
+</div>
+<div class="checkbox-group">
+    <input type="checkbox" id="double-exposure">
+    <label for="double-exposure">Double Exposure</label>
+</div>
                     <!-- Chromatic Aberration -->
                     <div class="setting-group">
                         <label for="chromatic-aberration"><i class="fas fa-rainbow"></i> Chromatic Aberration</label>
