--- a/video-prompt/index.html
+++ b/video-prompt/index.html
@@ -296,6 +296,29 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- In the Visual Effects section, add these new options -->
+<div class="effects-category">
+    <h4>Advanced Effects</h4>
+    <div class="effects-checkboxes">
+        <!-- Add these new checkboxes -->
+        <div class="checkbox-group">
+            <input type="checkbox" id="split-screen">
+            <label for="split-screen">Split Screen</label>
+        </div>
+        <div class="checkbox-group">
+            <input type="checkbox" id="reverse-motion">
+            <label for="reverse-motion">Reverse Motion</label>
+        </div>
+        <div class="checkbox-group">
+            <input type="checkbox" id="time-freeze">
+            <label for="time-freeze">Time Freeze</label>
+        </div>
+        <div class="checkbox-group">
+            <input type="checkbox" id="parallax">
+            <label for="parallax">Parallax Effect</label>
+        </div>
+    </div>
+</div>
                     </div>
                 </div>
 
