--- a/video-prompt/index.html
+++ b/video-prompt/index.html
@@ -413,7 +413,7 @@
             <option value="sora">Sora (AI)</option>
             <option value="pika">Pika Labs</option>
             <option value="runway">Runway ML</option>
-            <option value="veo3">Veo3 (Google)</option>
+            <option value="veo3" selected>Veo3 (Google)</option>
             <option value="veo2">Veo2 (Google)</option>
             <option value="tensor-video">Tensor Video</option>
         </select>
