--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
   }
 </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="assets/coinSystem.js"></script>
+    <!-- script src="assets/coinSystem.js"></script -->
     <script src="assets/adBannerModule.js"></script>
     <script src="assets/models.js"></script>
     <script src="assets/negatif.js"></script>
