--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <!-- Coin System -->
-      <div class="coin-controls">
+      <!-- div class="coin-controls">
         <div class="coin-display-container">
           <div class="coin-display">
             <i class="fas fa-coins"></i>
@@ -98,7 +98,7 @@
             <span id="reset-timer">Reset in 24:00:00</span>
           </div>
         </div>
-      </div>
+      </div -->
 
       <!-- Existing dark mode and language toggles remain unchanged -->
       <div class="dark-mode-toggle" id="dark-mode-toggle">
