--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@
     <script src="assets/negatif.js"></script>
     <script src="assets/ruangriung.js"></script>
     <script src="assets/translationModule.js"></script>
-        <script src="assets/faqModule.js"></script>
+        <!-- script src="assets/faqModule.js"></script -->
     <script src="assets/promptTranslate.js"></script>
     <script src="assets/consent-cookies.js"></script>
     <script src="assets/status-indicator.js"></script>
