--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
 
     <div class="modal-section">
         <p><b>Yo, Warga RuangRiung! 👋</b></p>
-        <p>Nggak kerasa, RuangRiung AI Image Generator udah setahun nemenin kita semua. Buat ngerayain ulang tahun pertama kita, kita mau ngadain battle seru-seruan yang pastinya pecah!</p>
+        <p>Nggak kerasa, Group RuangRiung AI Image udah setahun nemenin kita semua. Buat ngerayain ulang tahun pertama kita, kita mau ngadain battle seru-seruan yang pastinya pecah!</p>
     
         <p>
             <b>Kapan?</b><br>
